fixed column widths. added vert spacing. made emails responsive. close #61, close #60, close #27

--- a/app/components/Forms/UserForm/UserDetailForm/style.scss
+++ b/app/components/Forms/UserForm/UserDetailForm/style.scss
@@ -5,7 +5,7 @@
 	}
 
 	.row {
-		padding: 10px 0px;
+		padding: 15px 0px;
 	}
 
 	.col-xs-12 {
@@ -36,7 +36,7 @@
 	}	
 
 	.info-field {
-		padding-top: 5px;
+		padding: 5px 0px;
 	}
 
 	.lineitem-title {
@@ -61,9 +61,25 @@
 		}
 
 		td {
-		    max-width: 150px;
-		    max-height: 50px;
-		    overflow: hidden;
+	    max-width: 150px;
+	    max-height: 50px;
+	    overflow: hidden;
+		}
+
+		.td-first {
+			width: 15%
+		}
+
+		.td-second {
+			width: 20%
+		}
+		
+		.td-third {
+			width: 15%
+		}
+
+		.td-forth {
+			width: 50%
 		}
 	}
 
